src/test/ui/issues/issue-36400.stderr
error[E0596]: cannot borrow `*x` as mutable, as `x` is not declared as mutable
  --> $DIR/issue-36400.rs:5:7
   |
LL |     let x = Box::new(3);
   |         - help: consider changing this to be mutable: `mut x`
LL |     f(&mut *x);
   |       ^^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
